--- a/src/app/Components/quiz/quiz.component.html
+++ b/src/app/Components/quiz/quiz.component.html
@@ -1,20 +1,22 @@
-<mat-card *ngFor="let question of questions" class="example-card">
-  <mat-card-content>
-    <h2 style="text-align: center;">{{questions.title}}</h2>
-    <mat-radio-group
-      aria-labelledby="example-radio-group-label"
-      class="example-radio-group"
-    >
-      <mat-radio-button
-        class="example-radio-button"
-        *ngFor="let question of questions"
-        [value]="question"
+<div class="container-fluid">
+  <mat-card *ngFor="let question of questions" class="example-card">
+    <mat-card-content>
+      <h2 style="text-align: center;">{{ question.title }}</h2>
+      <mat-radio-group
+        aria-labelledby="example-radio-group-label"
+        class="example-radio-group"
       >
-        {{ question.options.title}}
-      </mat-radio-button>
-    </mat-radio-group>
-  </mat-card-content>
-  <mat-card-actions class="pl-4">
-    <button color="primary" mat-raised-button>NEXT</button>
-  </mat-card-actions>
-</mat-card>
+        <mat-radio-button
+          class="example-radio-button"
+          *ngFor="let option of question.options"
+          [value]="option"
+        >
+          {{ option.title }}
+        </mat-radio-button>
+      </mat-radio-group>
+    </mat-card-content>
+    <mat-card-actions class="pl-4">
+      <button color="primary" mat-raised-button>NEXT</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
